# flit-experiments

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_power_analysis.py  setup.py
Documentation/: Experimentation_Methodology.md
design/: bigquery_utils.py  power_analysis.py  update_experiment_config.py
flit_experiment_configs/: __init__.py  client.py
flit_experiment_configs/configs/: experiments.yaml
